# CO2-Emission-Intensity-Prediction-Germany-AutoML

./: .gitignore  README.md
CO2_Intensity/: README.md  compose.yml  config.yaml  keys.yaml.example  manual_runs.py  pyproject.toml
CO2_Intensity/atlite/: cutout.py  data.py  gis.py
CO2_Intensity/cosema/: calc_forecast.py  calc_installed_capacities.py  calc_intensities.py  calc_vre.py  cross_border_scripts.py  db_client.py  demand_scripts.py  download_scripts.py  download_scripts_SMARD.py  download_scripts_UK.py  forecast_scripts.py  gap_filling_scripts.py  loggers.py  per_type_scripts.py  per_unit_scripts.py  prepare_data_scripts.py  pypsa_scripts.py  regionalization.py  vre_scripts.py
CO2_Intensity/docker_configs/: grafana.ini
CO2_Intensity/docker_configs/dashboard-definitions/: Inputs.json  outputs.json  validation.json
CO2_Intensity/docker_configs/dashboards/: dashboards.yml
CO2_Intensity/docker_configs/datasources/: datasource.yml
CO2_Intensity/misc/: calc_hps_intensities.py  create_shapefiles.py
CO2_Intensity/netallocation/: __init__.py  breakdown.py  common.py  convert.py  cost.py  evaluate.py  flow.py  grid.py  io.py  linalg.py  plot.py  plot_helpers.py  process.py  test.py  utils.py
CO2_Intensity/schedulers/: commands.txt  forecast_calculations.py  initial_calculations.py  restart.sh  stop_all.sh  updated_calculations.py
Docs/: Dataset Approach.docx  ENTSO-E Documentation.docx  Entsoe_API_Coverage.pptx  TRACE_Summary.docx
Final/: Get_Predictions-2.ipynb  Main_Pipeline-2.ipynb  config_DE.yaml
co2Map_api/: ALLState_Autoglueon_Prediction.py  (+8 more)
(+45 files in other folders)
