[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.poetry]
name = "cosema"
version = "0.1.0"
description = "CO2 Emissions regionalization for Germany"
authors = ["COSEMA Developers <nick.harder@inatech.uni-freiburg.de>"]

packages = [
    { include = "cosema", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
pyyaml = "^6.0"
xarray = "2024.3.0"
dask = "^2024.7"
pypsa = "^0.26.3"
pyomo = "^6.6.1"
entsoe-py = "^0.6.8"
APScheduler = "^3.10.4"
cdsapi = "^0.7.3"
geopandas = "^0.14.0"
open-mastr = "^0.13.2"
requests = "^2.31.0"
retry = "^0.9.2"
tqdm = "^4.66.1"
influxdb = "^5.3.1"
pgeocode = "^0.4.1"
rasterio = "^1.3.9"
progressbar = "^2.5"
h5py = "^3.10.0"
sparse = "^0.15.1"
pyarrow = "^17.0.0"
h5netcdf = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
# Add any scripts here if needed

[tool.poetry.extras]
# Add any extras here if needed